# wintermute-tts

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  clippy.toml
agent/: intent-card.json
docs/: PEON_PING_INTEGRATION.md
src/: bus.rs  cache.rs  cloud.rs  cloud_ws.rs  daemon.rs  lib.rs  main.rs  synth.rs  voicepack.rs  wav.rs
tests/: acceptance_ac8.rs  acceptance_template.rs  bus_smoke.rs  hardware_acs.rs
